added init architecture files for template.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>hello</h1>
 
-  <body>
+  <body class="bg-primary-light">
 
     <p>contact me <a href="/src/contact/index.html">Contact</a></p>
     <p>about me <a href="/src/about/index.html">About</a></p>
